--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -35,126 +35,26 @@ input:focus {
 }
 
 /*------------ main -------------*/
-/*------------ wallpaper -------------  */
-.slider {
-  width: 1920px;
-  height: 660px;
-  position: relative;
-  margin: 0 auto;
-  overflow: hidden;
-  /* box-shadow: in */
-}
-.slider input[type="radio"] {
-  display: none;
-}
-
-ul.imgs {
-  padding: 0;
-  margin: 0;
-}
-ul.imgs li {
+/* ----------- slide ----------- */
+.slideText {
   position: absolute;
-  left: 640px;
-  transition-delay: 1s;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  top: 30%;
+  left: 25%;
+  color: white;
+  font-size: 30px;
 }
 
-@font-face {
-  /* font-family: "TmonMonsori"; */
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/TmonMonsori.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
+.slideBtn {
+  background-color: #ff914d;
+  border-radius: 20px;
+  font-size: 20px;
+  padding: 2% 5%;
+  color: white;
+  font-weight: bold;
+  border: none;
+  margin-top: 10%;
 }
 
-ul.imgs li .catchphrase {
-  position: absolute;
-  left: 40%;
-  top: 40%;
-  transform: translate(-50%, -50%);
-  font-size: 40px;
-  /* font-family: "TmonMonsori"; */
-  text-align: left;
-  color: #fff;
-  line-height: 80px;
-}
-ul.imgs li .catchphrase button {
-  /* position: absolute;
-  left: 80%;
-  top: 100%; */
-}
-@font-face {
-  font-family: "SBAggroB";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff")
-    format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-ul.imgs li .catchphrase .MEMORAVEL {
+.MEMORAVEL {
   color: #ff914d;
-  letter-spacing: 5px;
-  /* font-family: "SBAggroB"; */
 }
-
-ul.imgs li:nth-child(2) .catchphrase {
-  left: 60%;
-  top: 60%;
-}
-ul.imgs li:nth-child(3) .catchphrase {
-  left: 40%;
-  top: 40%;
-  text-shadow: 1px 1px 1px #bdd7e7;
-}
-.bullets {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 20px;
-  z-index: 2;
-}
-.bullets label {
-  display: inline-block;
-  border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.55);
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-}
-
-.slider
-  input[type="radio"]:nth-child(1):checked
-  ~ .bullets
-  > label:nth-child(1) {
-  background-color: #fff;
-}
-.slider
-  input[type="radio"]:nth-child(2):checked
-  ~ .bullets
-  > label:nth-child(2) {
-  background-color: #fff;
-}
-.slider
-  input[type="radio"]:nth-child(3):checked
-  ~ .bullets
-  > label:nth-child(3) {
-  background-color: #fff;
-}
-
-.slider input[type="radio"]:nth-child(1):checked ~ ul.imgs > li:nth-child(1) {
-  left: 0;
-  transition: 0.5s;
-  z-index: 1;
-}
-.slider input[type="radio"]:nth-child(2):checked ~ ul.imgs > li:nth-child(2) {
-  left: 0;
-  transition: 0.5s;
-  z-index: 1;
-}
-.slider input[type="radio"]:nth-child(3):checked ~ ul.imgs > li:nth-child(3) {
-  left: 0;
-  transition: 0.5s;
-  z-index: 1;
-}
-/*------------ wallpaper -------------  */
