--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -1,5 +1,13 @@
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
 * {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Pretendard-Regular";
   font-optical-sizing: auto;
 }
 
@@ -18,6 +26,7 @@
   display: inline-block;
   border: none;
   line-height: 16px;
+  vertical-align: middle;
 }
 
 input:focus {
@@ -35,7 +44,7 @@ input:focus {
 }
 
 /*------------ main -------------*/
-/* ----------- slide ----------- */
+/* slide */
 .slideText {
   position: absolute;
   top: 30%;
@@ -57,4 +66,55 @@ input:focus {
 
 .MEMORAVEL {
   color: #ff914d;
+}
+
+/* writedown */
+.writedown {
+  margin: 5% 10%;
+}
+
+.titletext {
+  font-size: 20px;
+}
+
+.selectoption {
+  border: 1px solid #f1f1f1;
+  border-radius: 100px;
+  box-shadow: 4px 4px 10px 2px#c0c0c0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5% 8%;
+  margin-top: 5%;
+  vertical-align: middle;
+}
+
+.selectDest {
+  display: flex;
+  border-right: 2px solid #545454;
+  padding-right: 30px;
+  vertical-align: middle;
+}
+
+.selectDate {
+  display: flex;
+  width: 150px;
+  vertical-align: middle;
+}
+
+.selectCategory {
+  border-left: 2px solid #545454;
+  padding-left: 30px;
+  display: flex;
+  vertical-align: middle;
+}
+
+.selectBtn {
+  height: 50px;
+  width: 180px;
+  border: none;
+  color: white;
+  background-color: #ff914d;
+  border-radius: 30px;
+  vertical-align: middle;
 }
