--- a/css/mypage.css
+++ b/css/mypage.css
@@ -100,6 +100,22 @@ input:focus {
   font-size: 20px;
 }
 
+.SelectedDate {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  vertical-align: middle;
+  margin-top: 5%;
+}
+
+.date {
+  display: flex;
+  margin-left: 2%;
+  font-size: 20px;
+  font-weight: bold;
+  color: #545454;
+}
+
 /* trip-info */
 .trip-info-line {
   display: flex;
