--- a/css/index.css
+++ b/css/index.css
@@ -184,6 +184,18 @@ input:focus {
   padding-left: 20%;
 }
 
+.recommendBtn {
+  background-color: #ff914d;
+  border-radius: 20px;
+  font-size: 20px;
+  padding: 3% 8%;
+  color: white;
+  font-weight: bold;
+  border: none;
+  margin-top: 50%;
+  margin-left: 35%;
+}
+
 /* footer */
 .site-footer {
   background-color: #545454;
