--- a/memoravel/src/main/webapp/assets/css/mypage.css
+++ b/memoravel/src/main/webapp/assets/css/mypage.css
@@ -90,10 +90,55 @@ input:focus {
   color: #ff914d;
 }
 
+:root {
+  --nav-length: 2;
+  --nav-width: calc(35% / var(--nav-length));
+}
+nav {
+  position: relative;
+  display: flex;
+  text-align: center;
+  margin-bottom: 5%;
+}
+nav a {
+  display: block;
+  width: var(--nav-width);
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+}
+
+nav a:hover {
+  color:  #ff914d;
+}
+
+.nav-underline {
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: var(--nav-width);
+  height: 2px;
+  background: #333;
+  transition: all .3s ease-in-out;
+}
+nav a:nth-child(1).is-current ~ .nav-underline {
+  left: calc(var(--nav-width) * 0);
+}
+nav a:nth-child(2).is-current ~ .nav-underline {
+  left: calc(var(--nav-width) * 1);
+}
+nav a:nth-child(1):hover ~ .nav-underline {
+  left: calc(var(--nav-width) * 0);
+}
+nav a:nth-child(2):hover ~ .nav-underline {
+  left: calc(var(--nav-width) * 1);
+}
+
+
 /* writedown */
 .writedown {
   padding: 5% 10%;
-  margin-top: 5%;
+  margin-top: 100px;
 }
 
 .titletext {
